# mldevops_exercise

./: NN_basic.ipynb  NN_basic.py  pyproject.toml
wandb/run-20241030_115143-r7hym8yw/files/: config.yaml
wandb/run-20241030_130025-7pfx9s8v/files/: config.yaml
